--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
-    <title>Book My Show Appln</title>
+    <title>Book My Show Clone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
